hphp/test/zend/good/ext/standard/tests/strings/crypt_blowfish_variation1.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!function_exists('crypt') || !defined("CRYPT_BLOWFISH")) {
    die("SKIP crypt()-blowfish is not available");
}
}
