hphp/test/zend/bad/ext/standard/tests/strings/crypt_sha256.php.skipif
<?php
if (!function_exists('crypt') || !defined("CRYPT_SHA256")) {
	die("SKIP crypt()-sha256 is not available");
}
?> 